Functionality done, working on styling

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
         MENU
     </nav>
     <div id='squareContainer'>
-        <div id='oneOne'>1,1</div>
-        <div id='oneTwo'>1,2</div>
-        <div id='oneThree'>1,3</div>
-        <div id='twoOne'>2,1</div>
-        <div id='twoTwo'>2,2</div>
-        <div id='twoThree'>2,3</div>
-        <div id='threeOne'>3,1</div>
-        <div id='threeTwo'>3,2</div>
-        <div id='threeThree'>3,3</div>
+        <div id='oneOne' class='buttons'>-</div>
+        <div id='oneTwo' class='buttons'>-</div>
+        <div id='oneThree' class='buttons'>-</div>
+        <div id='twoOne' class='buttons'>-</div>
+        <div id='twoTwo' class='buttons'>-</div>
+        <div id='twoThree' class='buttons'>-</div>
+        <div id='threeOne' class='buttons'>-</div>
+        <div id='threeTwo' class='buttons'>-</div>
+        <div id='threeThree' class='buttons'>-</div>
     </div>
+    <p class= 'playerTurn'>Player 1 Turn</p>
     <script src= 'script.js'></script>
 </body>
 </html>
