Start a new game pending

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <nav>
-        MENU
+        <div>MENU</div>
+        <button class= 'newGame'>New Game</button>
     </nav>
     <div id='squareContainer'>
         <div id='oneOne' class='buttons'>-</div>
