NewGame button and win counter funct. completed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <nav>
         <div>MENU</div>
         <button class= 'newGame'>New Game</button>
+        <div class= 'playerOneWinCount'>Player One Wins:</div>
+        <div class= 'playerTwoWinCount'>Player Two Wins:</div>
+        <div class= 'tieCount'>Ties:</div>
     </nav>
     <div id='squareContainer'>
         <div id='oneOne' class='buttons'>-</div>
