local storage completed and reset global count button done, working on AI

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <div>MENU</div>
         <button class= 'newGame'>New Game</button>
+        <button class= 'resetCount'>Reset Global Count</button>
         <div class= 'playerOneWinCount'>Player One Wins:</div>
         <div class= 'playerTwoWinCount'>Player Two Wins:</div>
         <div class= 'tieCount'>Ties:</div>
